@startuml
title CPU Factory Simulator — Full Class Diagram

!pragma layout smetana
skinparam backgroundColor #0d1117
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontColor #e8edf3
skinparam defaultFontSize 12

skinparam class {
    BackgroundColor #1e2530
    BorderColor #4a90d9
    FontColor #e8edf3
    AttributeFontColor #c8d6e5
    ArrowColor #6ab0de
    HeaderBackgroundColor #2a3a52
    StereotypeFontColor #a0b8d0
}

skinparam enum {
    BackgroundColor #1a2840
    BorderColor #5a7fa8
    FontColor #e8edf3
    HeaderBackgroundColor #0f1e33
}

skinparam note {
    BackgroundColor #1a2535
    BorderColor #4a7090
    FontColor #c8d8e8
}

skinparam arrow {
    Color #6ab0de
    FontColor #a8c8e8
    MessageAlignment left
}

skinparam title {
    FontColor #e8edf3
    FontSize 16
    FontStyle bold
}


' ═══════════════════════════════════════════════════════
' Root
' ═══════════════════════════════════════════════════════
abstract class Root {
    +Root()
    +virtual ~Root()
    +virtual update(tick: int) = 0
}

' ═══════════════════════════════════════════════════════
' Product 계층
' ═══════════════════════════════════════════════════════
enum ProductType {
    RAW
    PATTERNED
    ETCHED
    DOPED
    CPU_TYPE
}

enum ProductState {
    IDLE
    DELETED
    DAMAGED
    GENERATED
}

abstract class Product {
    #type: ProductType
    #state: ProductState
    --
    +Product(t: ProductType)
    +Product(other: Product&)
    +virtual ~Product()
    +getType(): ProductType
    +getState(): ProductState
    +setState(s: ProductState)
    +virtual getTypeName(): string = 0
    +virtual update(tick: int)
}

class RawWafer {
    +RawWafer()
    +getTypeName(): string
}

class PatternedWafer {
    +PatternedWafer()
    +PatternedWafer(other: Product&)
    +getTypeName(): string
}

class EtchedWafer {
    +EtchedWafer()
    +EtchedWafer(other: Product&)
    +getTypeName(): string
}

class DopedWafer {
    +DopedWafer()
    +DopedWafer(other: Product&)
    +getTypeName(): string
}

class CPU {
    +CPU()
    +CPU(other: Product&)
    +getTypeName(): string
}

' ═══════════════════════════════════════════════════════
' Machine 계층
' ═══════════════════════════════════════════════════════
enum MachineState {
    MACHINE_IDLE
    MACHINE_PROCESSING
    MACHINE_BROKEN
}

enum Case {
    NORMAL
    BOTTLENECK
}

abstract class Machine {
    -state: MachineState
    -processTime: int
    -health: int
    -queue: vector<Product*>
    -currentProduct: Product*
    -output_num: int
    -remaining_time: int
    -repair_time: int
    -breakdown_chance: float
    -maxQueueSize: int
    #nextMachine: Machine*
    --
    +Machine(processT: int, repairT: int, breakdownC: float)
    +virtual ~Machine()
    +virtual update(tick: int) = 0
    +virtual getInfo(): string = 0
    +virtual switchCase(c: Case) = 0
    +virtual breakdown()
    +virtual repair()
    --
    +addQueue(product: Product*)
    +popQueue(): Product*
    +getQueueSize(): int
    +hasCurrentProduct(): bool
    +setNextMachine(next: Machine*)
    +getNextMachine(): Machine*
    --
    +getStateName(): string
    +getProgress(): int
    +getMaxQueueSize(): int
    +getDisplayProcessTime(): int
    +getDisplayHealth(): int
    +getDisplayRemainingTime(): int
    +getDisplayOutputNum(): int
    +getDisplayBreakdownChance(): float
    --
    #getState(): MachineState
    #setState(s: MachineState)
    #getProcessTime(): int
    #setProcessTime(t: int)
    #getHealth(): int
    #setHealth(h: int)
    #getOutputNum(): int
    #setOutputNum(n: int)
    #getRemainingTime(): int
    #setRemainingTime(t: int)
    #getRepairTime(): int
    #getBreakdownChance(): float
    #getCurrentProduct(): Product*
    #setCurrentProduct(product: Product*)
}

class Photolithography {
    ' processTime=15, repairTime=20, breakdownChance=10%
    +Photolithography()
    +update(tick: int)
    +getInfo(): string
    +switchCase(c: Case)
}

class Etcher {
    ' processTime=25, repairTime=30, breakdownChance=8%
    +Etcher()
    +update(tick: int)
    +getInfo(): string
    +switchCase(c: Case)
}

class IonImplantator {
    ' processTime=25, repairTime=30, breakdownChance=8%
    +IonImplantator()
    +update(tick: int)
    +getInfo(): string
    +switchCase(c: Case)
}

class Packager {
    ' processTime=10, repairTime=15, breakdownChance=15%
    -finishedProducts: vector<Product*>
    +Packager()
    +virtual ~Packager()
    +update(tick: int)
    +getInfo(): string
    +switchCase(c: Case)
    +getFinishedCount(): int
    +popFinishedProducts(): vector<Product*>
}

' ═══════════════════════════════════════════════════════
' FactoryController (BackendFacade)
' ═══════════════════════════════════════════════════════
class FactoryController {
    -photolithography_: Photolithography
    -etcher_: Etcher
    -ionImplantator_: IonImplantator
    -packager_: Packager
    -power_: bool[4]
    -rawWaferCount_: int
    -finishedCPUCount_: int
    -defectiveCount_: int
    -running_: bool
    --
    +FactoryController()
    --
    ' 제어 인터페이스
    +start()
    +pause()
    +reset()
    +addRawWafer(count: int)
    +repairMachine(index: int)
    +setPower(index: int, on: bool)
    --
    ' 틱 업데이트
    +update()
    --
    ' 상태 조회 (UI용)
    +isRunning(): bool
    +getMachineName(i: int): string
    +getMachineState(i: int): string
    +getMachineHealth(i: int): int
    +getMachineProgress(i: int): int
    +getMachineBreakdownChance(i: int): float
    +getMachineProcessTime(i: int): int
    +getMachineRemainingTime(i: int): int
    +getMachineQueueSize(i: int): int
    +getMachineOutputNum(i: int): int
    +getMachinePower(i: int): bool
    +getRawWaferCount(): int
    +getPatternedWaferCount(): int
    +getEtchedWaferCount(): int
    +getDopedWaferCount(): int
    +getFinishedCPUCount(): int
    +getDefectiveCount(): int
    --
    -getMachine(index: int): Machine*
    -collectFinishedProducts()
}

' ═══════════════════════════════════════════════════════
' UI 계층 (View Data 구조체)
' ═══════════════════════════════════════════════════════
enum ProductKind {
    RawWafer
    PatternedWafer
    EtchedWafer
    DopedWafer
    CPU
}

enum WorkState {
    Idle
    Processing
    Broken
}

class ControlPanelRequest <<struct>> {
    +requestStart: bool
    +requestPause: bool
    +requestReset: bool
    +requestAddRawWafer: bool
    +requestRepair: bool
    +requestPowerToggle: bool
    +selectedMachineIndex: int
    +rawWaferAmount: int
    +machinePowerOn: bool[4]
}

class MachineStatusViewData <<struct>> {
    +name: string
    +inputProduct: string
    +outputProduct: string
    +progress: float
    +durability: float
    +defectRate: float
    +processTime: float
    +remainingTime: float
    +waitingCount: int
    +state: WorkState
    +powerOn: bool
}

class ProductStatusViewData <<struct>> {
    +kind: ProductKind
    +name: string
    +count: int
    +defectiveCount: int
    +color: ImVec4
}

class ViewportViewData <<struct>> {
    +activeMachineIndex: int
    +activeProductIndex: int
    +machines: MachineStatusViewData[4]
    +products: ProductStatusViewData[5]
}

' ═══════════════════════════════════════════════════════
' UI 윈도우 클래스들
' ═══════════════════════════════════════════════════════
class ControlPanelWindow {
    -log_: vector<string>
    +Render(request: ControlPanelRequest&, data: ViewportViewData&, isRunning: bool)
    -AddLog(msg: string&)
}

class MachineStatusWindow {
    +Render(machines: MachineStatusViewData[4]&, selectedIndex: int&)
}

class ProductStatusWindow {
    +Render(products: ProductStatusViewData[5]&)
}

class FactoryViewportWindow {
    +Render(data: ViewportViewData&)
}

' ═══════════════════════════════════════════════════════
' 최상위 앱 클래스
' ═══════════════════════════════════════════════════════
class CpuFactoryApp {
    -controller_: FactoryController
    -request_: ControlPanelRequest
    -controlPanel_: ControlPanelWindow
    -machineStatus_: MachineStatusWindow
    -productStatus_: ProductStatusWindow
    -viewport_: FactoryViewportWindow
    --
    +Render()
    +IsDarkMode(): bool
}

' ═══════════════════════════════════════════════════════
' 상속 관계
' ═══════════════════════════════════════════════════════
Root <|-- Product
Root <|-- Machine

Product <|-- RawWafer
Product <|-- PatternedWafer
Product <|-- EtchedWafer
Product <|-- DopedWafer
Product <|-- CPU

Machine <|-- Photolithography
Machine <|-- Etcher
Machine <|-- IonImplantator
Machine <|-- Packager

' ═══════════════════════════════════════════════════════
' 연관 관계
' ═══════════════════════════════════════════════════════

' Machine 내부에 Product 보유
Machine o-- "0..*" Product : queue

' 공정 체인 (nextMachine 연결)
Photolithography --> Etcher : nextMachine
Etcher --> IonImplantator : nextMachine
IonImplantator --> Packager : nextMachine

' 각 장비가 변환하는 제품 타입
Photolithography ..> PatternedWafer : creates
Etcher ..> EtchedWafer : creates
IonImplantator ..> DopedWafer : creates
Packager ..> CPU : creates

' FactoryController 소유 관계
FactoryController *-- Photolithography
FactoryController *-- Etcher
FactoryController *-- IonImplantator
FactoryController *-- Packager

' FactoryController → 원자재 투입
FactoryController ..> RawWafer : injects

' View Data 포함
ViewportViewData *-- MachineStatusViewData
ViewportViewData *-- ProductStatusViewData
MachineStatusViewData --> WorkState
ProductStatusViewData --> ProductKind

' CpuFactoryApp 소유
CpuFactoryApp *-- FactoryController
CpuFactoryApp *-- ControlPanelRequest
CpuFactoryApp *-- ControlPanelWindow
CpuFactoryApp *-- MachineStatusWindow
CpuFactoryApp *-- ProductStatusWindow
CpuFactoryApp *-- FactoryViewportWindow

' 데이터 흐름
FactoryController ..> ViewportViewData : "BuildViewData() 통해 변환"
ControlPanelWindow ..> ControlPanelRequest : "reads/writes"
ControlPanelWindow ..> ViewportViewData : "reads"
MachineStatusWindow ..> MachineStatusViewData : "displays"
ProductStatusWindow ..> ProductStatusViewData : "displays"
FactoryViewportWindow ..> ViewportViewData : "renders"

note right of FactoryController
  공정 체인 관리:
  Photolithography → Etcher
  → IonImplantator → Packager
  update() 1회 호출 = 1 tick
  (10 ticks/sec)
end note

note right of Machine
  nextMachine을 기반 클래스에서
  관리하여 DRY 원칙 준수.
  소멸자에서 queue 및
  currentProduct 메모리 해제.
end note

note bottom of Packager
  finishedProducts 벡터로
  완성된 CPU를 보관.
  FactoryController가
  매 틱 수거(popFinishedProducts).
end note

@enduml
